--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body onload="changeName()">
@@ -36,56 +36,56 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <aside class="users">
             <ul class="userlist">
-                <li class="user top">
+                <li class="user top" id="user:Arthur Morgan<">
                     <img src="images/arthur.png" alt="avatar" />
                     <div class="about">
                         <div class="name">Arthur Morgan</div>
                         <br>
-                        <div class="status"><i> left 10 hours ago </i></div>
+                        <div class="status" id="activity"><i> left 10 hours ago </i></div>
                     </div>
                     <dialog open>
                         <span id="recentMessage">No recent messages...</span>
                     </dialog>
                 </li>
-                <li class="user">
+                <li class="user" id="user:Dutch Van Der Linde">
                     <img src="images/dutch.png" alt="avatar" />
                     <div class="about">
                         <div class="name">Dutch Van Der Linde</div>
                         <br>
-                        <div class="status"><i>Here now</i></div>
+                        <div class="status" id="activity"><i>Here now</i></div>
                     </div>
                     <dialog open>
                         <span id="recentMessage">No recent messages...</span>
                     </dialog>
                 </li>
-                <li class="user">
+                <li class="user" id="user:John Marston">
                     <img src="images/john.png" alt="avatar" />
                     <div class="about">
                         <div class="name">John Marston</div>
                         <br>
-                        <div class="status"><i> left 6 hours ago</i></div>
+                        <div class="status" id="activity"><i> left 6 hours ago</i></div>
                     </div>
                     <dialog open>
                         <span id="recentMessage">No recent messages...</span>
                     </dialog>
                 </li>
-                <li class="user">
+                <li class="user" id="user:Micah Bell">
                     <img src="images/micah.png" alt="avatar" />
                     <div class="about">
                         <div class="name">Micah Bell</div>
                         <br>
-                        <div class="status"><i>Here now</i></div>
+                        <div class="status" id="activity"><i>Here now</i></div>
                     </div>
                     <dialog open>
                         <span id="recentMessage">No recent messages...</span>
                     </dialog>
                 </li>
-                <li class="user">
+                <li class="user" id="user:Javier Escuella">
                     <img src="images/javier.png" alt="avatar" />
                     <div class="about">
                         <div class="name">Javier Escuella</div>
                         <br>
-                        <div class="status"><i> left 4 hours ago </i></div>
+                        <div class="status" id="activity"><i> left 4 hours ago </i></div>
                     </div>
                     <dialog open>
                         <span id="recentMessage">No recent messages...</span>
